--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,32 +5,33 @@
 
 		<div> 
 
-		 	<%= text_field_tag: first_name, nil placeholder: "Last Name" %> 
+		 	<%= text_field_tag :first_name, nil, placeholder: "Last Name" %> 
 
 		</div>
 
 
 		<div> 
 
-		 	<%= text_field_tag: last_name nil placeholder: "Last Name" %> 
+		 	<%= text_field_tag :last_name, nil, placeholder: "Last Name" %> 
 
 		</div>
 
 
 		<div> 
 
-	 		<%= text_field_tag: email, nil placeholder: "Email" %> 
+	 		<%= text_field_tag :email, nil, placeholder: "Email" %> 
 
 	 	</div>
 
 
 	 	<div> 
 
-	 		<%= password_filed_tag: password, nil placeholder: "Password" %> 
+	 		<%= password_field_tag :password, nil, placeholder: "Password" %>
+
 
 	 	</div>
 
-    <%= submit_tag "Join" %>
+    <input <%= submit_tag "Join" %>
     
 <% end %> 
 
