--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -5,6 +5,10 @@
 
 <div>
 	<h3> < % = house.location % > </h3>
+
+	<% if @current_user %>
+	< % = button_to "Join House" % >
+	<% end %>
 </div>
 <br>
 
