updated stylesheets for user index page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+h1 {
+
+	text-align: center
+}
+
+
+
+
 ng-enter, .ng-move{
   -webkit-animation: fadeIn 1s;
   -moz-animation: fadeIn 1s;
