--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,11 @@
 
 <title> AfriWallet | MJK83 - JMX </title>
 
-<h1> African - Stock - Trade  </h1>
+<h1> Student - Exchange - Housing  </h1>
 
-<h2> Small Busines Group </h2>
+<h2> Prepared housing for exchange students </h2>
 
-<p>Be your own Supplier or Buyer, Deliver or Sell anyway in Africa, we organise pick up and drop off, from medium size boxes to large freight.</p>
+<p>Housing with fitted furniture, Beds, washing machines and dish Washers .</p>
 
 
 
