updated index and app layout

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
 
 
-<title> AfriWallet | MJK83 - JMX </title>
+<title> Housing | MJK83 - JMX </title>
 
-<h1> Student - Exchange - Housing  </h1>
+<h1> Student - Exchange - Housing - Africa </h1>
 
 <h2> Prepared housing for exchange students </h2>
 
