--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,22 +8,90 @@ h1, h2, p {
 	text-align: center
 }
 
-
-
-
-
-
-
-ng-enter, .ng-move{
-  -webkit-animation: fadeIn 1s;
-  -moz-animation: fadeIn 1s;
-  -o-animation: fadeIn 1s;
-  animation: fadeIn 1s;
+body{
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
 }
 
-.ng-leave{
-  -webkit-animation: fadeOut 1s;
-  -moz-animation: fadeOut 1s;
-  -o-animation: fadeOut 1s;
-  animation: fadeOut 1s;
+header{
+	background: #00795f;
+	width: 100%;
+	padding: 15px 0;
+	color: #fff;
+	text-align: center;
 }
+
+nav ul{
+	background-color: #43a286;
+	overflow: hidden;
+	color: #fff;
+	padding: 0;
+	text-align: center;
+	margin: 0;
+	transition: max-height 0.5s;
+}
+
+nav ul li{
+	display: inline-block;
+	padding: 20px;
+}
+
+nav ul li a{
+	text-decoration: none;
+	color: inherit;
+}
+
+nav ul li:hover{
+	background-color: #399077;
+}
+
+.menu-icon{
+	width: 100%;
+	background: #005c48;
+	text-align: left;
+	box-sizing: border-box;
+	padding: 15px 10px;
+	cursor: pointer;
+	color: #fff;
+	display: none;
+	text-align: right;
+}
+
+@media (max-width: 580px){
+	nav ul{
+		max-height: 0px;
+	}
+
+	.showing{
+		max-height: 20em;
+	}
+
+	nav ul li{
+		box-sizing: border-box;
+		width: 100%;
+		padding: 15px;
+		text-align: left;
+	}
+
+	.menu-icon{
+		display: block;
+	}
+}
+
+
+
+
+// ng-enter, .ng-move{
+//   -webkit-animation: fadeIn 1s;
+//   -moz-animation: fadeIn 1s;
+//   -o-animation: fadeIn 1s;
+//   animation: fadeIn 1s;
+// }
+
+// .ng-leave{
+//   -webkit-animation: fadeOut 1s;
+//   -moz-animation: fadeOut 1s;
+//   -o-animation: fadeOut 1s;
+//   animation: fadeOut 1s;
+// }
