updated house ind9x html

--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -4,7 +4,7 @@
 <%=@houses.each do | house | %>
 
 <div>
-	<h3> <%=house.location%> </h3>
+	<h3> <%=house.%> </h3>
 
 	<% if @current_user%>
 	<%=button_to "Join House"%>
